--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "postcss-loader": "^2.1.6",
     "precss": "^3.1.2",
     "query-string": "^6.1.0",
-    "react": "^16.4.1",
+    "react": "^16.8.4",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.8.4",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.9",
     "react-router": "^4.3.1",
@@ -71,7 +71,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "@material-ui/core": "^3.9.2",
+    "reactstrap": "^7.1.0"
   }
 }
