--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-    "presets": ["env", "react", "react-hmre"],
+    "presets": ["env", "react", "react-hmre", "stage-0"],
     "plugins": ["transform-object-rest-spread"]
 }
