--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bootstrap": "^4.1.3",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
@@ -72,6 +73,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "reactstrap": "^7.1.0"
   }
 }
