--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "reactstrap": "^7.1.0"
+    "react-paypal-express-checkout": "^1.0.5",
+    "reactstrap": "^7.1.0",
+    "url-loader": "^1.1.2"
   }
 }
