--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
 node_modules
-.vscode
-typings
-dist
-coverage
-dll
-access.log
-error.log
-public
-.dll-build
-documentation
-.awcache
-.ebextensions/customUpstream.config
-*/**/npm-debug.log
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+/build
+.DS_Store
+package-lock.json
+/admin
