--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,44 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "outDir": "build/dist",
+    "module": "commonjs",
+    "target": "es2017",
+    "isolatedModules": false,
+    "baseUrl": "./",
+    "lib": [
+      "es7",
+      "dom",
+    ],
+    "paths": {
+      "src/*": [
+        "src/*"
+      ],
+      "components/*": [
+        "src/components/*"
+      ],
+      "icons/*": [
+        "src/resources/icons"
+      ]
+    },
+    "sourceMap": true,
+    "allowJs": true,
+    "strictNullChecks": false,
     "jsx": "react",
-    "module": "commonjs"
+    "moduleResolution": "node",
+    "rootDirs": [
+      "src",
+      "stories"
+    ],
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": false
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "build",
+    "scripts",
+    "acceptance-tests",
+    "webpack",
+    "jest",
+    "src/setupTests.ts"
   ]
-}   
+}
